<resources>
    <string name="app_name">Shopping List</string>
    <string name="settings_bottom_menu">Settings</string>
    <string name="notes_bottom_menu">Notes</string>
    <string name="shop_list_bottom_menu">Shop List</string>
    <string name="new_note_bottom_menu">New Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="new_note_menu_save_title">Save</string>
    <string name="bold_style">Bold style</string>
    <string name="color_picker">Color</string>
    <string name="new_list_text">New List Name</string>
    <string name="new_list_btn_text">Create New list</string>
    <string name="et_new_list_hint">New List</string>
    <string name="delete_item">Do you want to delete this item?</string>
    <string name="delete_btn_text">Delete</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="update">update</string>
    <string name="edit_note_title">Edit Note Title</string>
    <string name="delete_list">Delete List</string>
    <string name="clear_list">Clear List</string>
    <string name="share_list">Share List</string>
    <string name="new_item">New Item</string>
    <string name="save_item">Save Item</string>
    <string name="et_new_shop_item_hint">New Item</string>
    <string name="tv_empty_text">Пусто</string>
</resources>