<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_list"
        android:title="@string/delete_list"/>

    <item
        android:id="@+id/clear_list"
        android:title="@string/clear_list"/>

    <item
        android:id="@+id/share_list"
        android:title="@string/share_list"/>

    <item
        android:id="@+id/new_item"
        android:title="@string/new_item"
        android:icon="@drawable/ic_new_shop_item"
        android:actionLayout="@layout/edit_action_layout"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/save_item"
        android:title="@string/save_item"
        android:icon="@drawable/ic_save_shop_item"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"/>
</menu>